attempt to find SDK path

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ android:
 
 before_script:
 - echo ANDROID_TARGET=$ANDROID_TARGET
+- echo ANDROID=`which android`
 - npm install -g grunt-cli
 # Create and start emulator
 - echo no | android create avd --force -n test -t android-16 --abi armeabi-v7a
